--- a/personal-webpage/src/App.css
+++ b/personal-webpage/src/App.css
@@ -10,7 +10,7 @@
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 75px;
+  scroll-padding-top: 0px;
 }
 
 body {
@@ -22,11 +22,6 @@ body {
   font-family: 'Centra', sans-serif !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-  line-height: normal;
-}
 
 p, a, li, button, ul {
   margin: 0;
@@ -69,39 +64,31 @@ p.danger {
 }
 
 /************ Home Page ************/
-.gradient-theme{
-  background: linear-gradient(90deg, #120b3a, #010813 );
-  height: 100vh;
-  width: 100vw;
-}
-.App {
-  text-align: center;
+.introduction{
+  text-align: left;
 }
 
-.App-logo {
+.logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  /*background-color: #282c34;*/ /* this hides particles with z-index < 0 */
+.introduction > h1 {
   min-height: 100vh;
   display: flex;
+  white-space: pre-wrap;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   font-size: calc(30px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -113,9 +100,50 @@ p.danger {
   }
 }
 
+
+/************ About Me Css ************/
 .about-section{
   min-height: 100vh;
 }
+
+.about-section > h2{
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-container{
+  
+  margin: 200px auto;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: transparent;
+  border-radius: 20px;
+}
+
+.about-container-text{
+  background: linear-gradient(180deg, #1a02a2, #541ba4);;
+  font-size: 18px;
+  padding: 70px;
+  line-height: 35px;
+  white-space: pre-wrap;
+  align-items: left;
+  text-align: left;
+  max-width: 50%;
+}
+
+.about-container > img{
+  background-color: gray;
+  max-width: 50%;
+  padding-right: 30px;
+}
+
+
+/************ Proficiency Css ************/
 
 .profi-section{
   min-height: 100vh;
@@ -123,5 +151,8 @@ p.danger {
 
 /************ Navbar Css ************/
 
-
+/************ Footer Css ************/
+.footer-section{
+  min-height: 30vh;
+}
 
