--- a/personal-webpage/src/components/NavBar.css
+++ b/personal-webpage/src/components/NavBar.css
@@ -1,9 +1,26 @@
+/* For animation of drop menu*/
+@keyframes slideFade {
+    from {
+        opacity: 0;
+        transform: translateX(-50%) translateY(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0);
+    }
+}
+
+
 .navBar {
-    padding-top: 30px;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin: 20px 0px;
+    margin-left: 25px;
+    margin-right: 25px;
+    /*background-color: #AFDCE7;*/
     background-color: transparent;
     border-radius: 80px;
+    /* border: solid #ff0000 2px; */
+    padding: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     z-index: 1000;
@@ -15,7 +32,7 @@
     margin-left: auto;
     margin-right: auto;
     /* color: #D89D5B; */
-    color: #ffffff;
+    color: white;
     font-family: 'SF FONT bold', Arial, sans-serif;
     font-size: 15pt;
     text-align: center;
@@ -34,8 +51,46 @@
 }
 
 .navBar td:hover {
-    color: #914cd2;
+    color: #6e0d9b;
     transition: transform 1s, color 1s;
+}
+
+.dropdownContent {
+    display: none;
+    /* background-color: #15ac9f; */
+    background-color: transparent;
+    border: white;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: 160px;
+    z-index: 1;
+    border-radius: 10px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.dropdownContent td {
+    padding: 12px 16px;
+    color: white;
+}
+
+.dropdownContent td:hover {
+    background-color: #fdfdfd;
+}
+
+td:hover .dropdownContent {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    animation: slideFade 0.3s forwards;
+}
+
+.navBar .dropdownContent a {
+    text-decoration: none;
+
+    color: #FFFFFF;
 }
 
 .navBar a {
@@ -44,7 +99,7 @@
 }
 
 .navBar a:hover {
-    color: #914cd2;
+    color: #9935a2;
     transition: transform 1s, color 1s;
 }
 
@@ -54,9 +109,34 @@
 
 
 @media screen and (max-width: 1000px) {
-    
-    .navBar table {
-        font-size: 10pt;
+
+    .navBar {
+        display: flex;
+        align-items: center !important;/* Center items vertically */
+        justify-content: space-between; /* Spacing between items */
     }
-    
+
+    .menu-toggle {
+        display: block;
+        /* Display the menu toggle button for smaller screens */
+    }
+
+    .menu-closed {
+        display: none;
+        /* Hide the menu items when menu is closed */
+    }
+
+    .menu-open {
+        display: table;
+        /* Show the menu items when menu is open */
+    }
+
+    .menu-open td {
+        display: block;
+        /* Display each table cell as a block element */
+        text-align: center;
+        /* Center-align the text in table cells */
+        margin-bottom: 10px;
+        /* Add some space between items */
+    }
 }
